<resources>
    <string name="app_name">Account Keeper</string>
    <string name="my_accounts">My Accounts</string>
    <string name="others">Others</string>
    <string name="find">Find</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="app_slogan">Keep your accounts in one place</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_you_have_an_account_create">Don\'t you have an account? Create</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="password_reset_email_sent">Password reset link was sent to your email address</string>
    <string name="password_reset_email_error">Error occurred while sending email</string>
    <string name="new_account_added">A new account is added.</string>
    <string name="account_updated">The account is updated.</string>
    <string name="account_deleted">The account is deleted.</string>
    <string name="error_loading_accounts">Error while loading accounts.</string>
    <string name="account_image">Account Image</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="wallet_image">Wallet Image</string>
    <string name="extra">Extra</string>
    <string name="copy_address">Copy Address</string>
    <string name="no_data_available">You have not saved any account yet</string>
    <string name="search_not_found">Could not find any account</string>
    <string name="search_your_personal_accounts">Search your personal accounts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_name_prompt">Account Name</string>
    <string name="account_description_prompt">Account Description</string>
    <string name="account_number_prompt">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="bank_account">Bank Account</string>
    <string name="crypto">Crypto</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="other">Other</string>
    <string name="is_this_your_personal_account">Is this your personal account?</string>
    <string name="personal_account">Personal Account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_it_going_to_be_private">Is this private account?</string>
    <string name="account_saved_successfully">Account is saved successfully.</string>
    <string name="undo">Undo</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_password">Change Password</string>
    <string name="share_profile">Share Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="sync_your_accounts">Sync your accounts</string>
    <string name="accounts_synced_successfully">Your accounts are up to date.</string>
    <string name="click_the_link_for_available_accounts">Click the link to see my available accounts in Account Keeper.</string>
    <string name="share_with">Share with</string>
    <string name="click_the_link_for_details">Click the below link to see the account details in Account Keeper.</string>
    <string name="prompt_name_surname">Name Surname</string>
    <string name="required_field">Required field</string>
    <string name="save">Save</string>
    <string name="editbutton">editButton</string>
    <string name="check_your_network_status">Check your network status.</string>
    <string name="your_user_name_has_been_updated">Your username has been updated successfully.</string>
    <string name="user_not_found">User has not been found.</string>
    <string name="search_by_name_and_surname">Search by Name and Surname</string>
    <string name="retry">Retry</string>
    <string name="find_users_accounts_by_searching_their_name">Find users\' accounts ny searching their name</string>
    <string name="search_for_users_to_see_their_accounts">Search for users to see their accounts.</string>
    <string name="try_to_search_for_longer_name">Try to search for a longer name.</string>
    <string name="accounts_not_found">Accounts have not been found.</string>
    <string name="search_your_saved_accounts">Search your saved accounts</string>
</resources>
