<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_slogan"
        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_account_keeper"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/emailCardView"
        style="@style/MaterialCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/colorSurface"
                android:focusable="true"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="45dp"
                android:paddingEnd="45dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorSecondary" />

            <ImageView
                android:id="@+id/emailErrorImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorError" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/emailErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/invalid_email"
        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
        android:textColor="?attr/colorError"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/emailCardView"
        app:layout_constraintTop_toBottomOf="@id/emailCardView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/passwordCardView"
        style="@style/MaterialCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailErrorTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/colorSurface"
                android:focusable="true"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingStart="45dp"
                android:paddingEnd="45dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_private"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorSecondary" />

            <ImageView
                android:id="@+id/passwordToggleImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_visibility_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorSecondary" />

            <ImageView
                android:id="@+id/passwordErrorImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorError" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/passwordErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/invalid_password"
        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
        android:textColor="?attr/colorError"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/passwordCardView"
        app:layout_constraintTop_toBottomOf="@id/passwordCardView" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/forgot_your_password"
        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
        app:layout_constraintEnd_toEndOf="@id/passwordCardView"
        app:layout_constraintTop_toBottomOf="@+id/passwordErrorTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signInFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_forward"
        app:layout_constraintEnd_toEndOf="@id/forgotPasswordTextView"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/signInFab"
        app:layout_constraintEnd_toEndOf="@id/signInFab"
        app:layout_constraintStart_toStartOf="@id/signInFab"
        app:layout_constraintTop_toTopOf="@id/signInFab" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline5"
        app:layout_constraintBottom_toBottomOf="@id/signInFab"
        app:layout_constraintEnd_toStartOf="@+id/signInFab"
        app:layout_constraintTop_toTopOf="@id/signInFab" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/signInTextView"
        app:layout_constraintStart_toStartOf="@id/passwordCardView"
        app:layout_constraintTop_toTopOf="@+id/signInTextView" />

    <TextView
        android:id="@+id/formChangeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/don_t_you_have_an_account_create"
        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>