<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clipToPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/personal_account_background"
        android:padding="10dp">

        <ImageView
            android:id="@+id/accountImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/account_image"
            android:src="@drawable/ic_account_circle"
            app:layout_constraintBottom_toBottomOf="@id/accountNameTextView"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/accountNameTextView"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/accountNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textIsSelectable="true"
            app:layout_constraintStart_toEndOf="@id/accountImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Binance BTC Address" />

        <ImageView
            android:id="@+id/editImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/copy_to_clipboard"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@id/accountNameTextView"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/accountNameTextView"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/accountAddressImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/wallet_image"
            android:src="@drawable/ic_wallet"
            app:layout_constraintBottom_toBottomOf="@id/accountAddressTextView"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/accountAddressTextView"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/accountAddressTextView"
            style="@style/TextAppearance.MyTheme.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="@id/accountNameTextView"
            app:layout_constraintTop_toBottomOf="@id/accountNameTextView"
            tools:text="TR12 3456 7812 3456 78" />

        <ImageView
            android:id="@+id/accountDescriptionImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/extra"
            android:src="@drawable/ic_description"
            app:layout_constraintBottom_toBottomOf="@id/accountDescriptionTextView"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/accountDescriptionTextView"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/accountDescriptionTextView"
            style="@style/TextAppearance.MyTheme.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="@id/accountNameTextView"
            app:layout_constraintTop_toBottomOf="@id/accountAddressTextView"
            tools:text="TR12 3456 7812 3456 78" />

        <ImageView
            android:id="@+id/qrImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:src="@drawable/qr_icon"
            app:layout_constraintBottom_toBottomOf="@id/copyAddressButton"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/copyAddressButton"
            app:layout_constraintTop_toTopOf="@id/copyAddressButton"
            app:tint="?attr/colorOnPrimary"
            android:elevation="10dp"/>

        <ImageView
            android:id="@+id/privacyImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_public"
            app:layout_constraintTop_toTopOf="@id/copyAddressButton"
            app:layout_constraintBottom_toBottomOf="@id/copyAddressButton"
            app:layout_constraintStart_toStartOf="@id/accountAddressImageView"
            app:layout_constraintEnd_toEndOf="@id/accountAddressImageView"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copyAddressButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingEnd="50dp"
            android:text="@string/copy_address"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountDescriptionImageView"
            app:strokeColor="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/shareImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/copy_to_clipboard"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@id/copyAddressButton"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/copyAddressButton"
            app:tint="?attr/colorOnPrimary" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/descriptionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="accountDescriptionTextView, accountDescriptionImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>